--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
