--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "sass": "^1.44.0",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
