--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@dicebear/avatars": "^4.10.1",
     "@dicebear/avatars-male-sprites": "^4.10.1",
     "@dicebear/pixel-art": "^4.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cypress": "^9.1.0",
     "immutability-helper": "^3.1.1",
+    "jest-dom": "^4.0.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
@@ -20,6 +24,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "sass": "^1.44.0",
     "serve": "^13.0.2",
@@ -30,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
