--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://rapm94.github.io/hotel-miranda-dashboard",
   "name": "hotel-miranda-dashboard",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,12 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "cypress": "^9.1.0",
+    "gh-pages": "^3.2.3",
     "immutability-helper": "^3.1.1",
     "jest-dom": "^4.0.0",
     "react": "^17.0.2",
@@ -29,6 +35,7 @@
     "sass": "^1.44.0",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
+    "typescript": "^4.5.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -36,7 +43,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +64,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.18"
   }
 }
