--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://rapm94.github.io/hotel-miranda-dashboard",
+  "homepage": "https://rapm94.github.io/hotel-miranda-dashboard",
   "name": "hotel-miranda-dashboard",
   "version": "0.1.0",
   "private": false,
@@ -13,11 +13,13 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3": "^7.1.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "cypress": "^9.1.0",
+    "d3": "^7.2.1",
     "gh-pages": "^3.2.3",
     "immutability-helper": "^3.1.1",
     "jest-dom": "^4.0.0",
@@ -35,7 +37,7 @@
     "sass": "^1.44.0",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.3",
+    "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
