--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "hotel-miranda-dashboard",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "dependencies": {
     "@dicebear/avatars": "^4.10.1",
     "@dicebear/avatars-male-sprites": "^4.10.1",
     "@dicebear/pixel-art": "^4.10.1",
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +20,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "cypress": "^9.1.0",
     "d3": "^7.2.1",
     "gh-pages": "^3.2.3",
@@ -41,6 +45,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "nodemon index.tsx",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
