--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
+    "react-toastify": "^8.1.1",
     "redux": "^4.1.2",
     "sass": "^1.44.0",
     "serve": "^13.0.2",
