--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "start": "react-scripts start",
     "dev": "nodemon index.tsx",
     "build": "CI=false react-scripts build",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
