--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -41,7 +41,10 @@ jobs:
         npm install
         npm run build --if-present
         npm run test --if-present
-
+        
+    - name: Zip artifact for deployment
+      run: zip release.zip ./* -r
+      
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
@@ -60,7 +63,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: node-app
-
+        
+    - name: unzip artifact for deployment
+      run: unzip release.zip
+      
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp 
       uses: azure/webapps-deploy@v2
